--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,19 @@
 {
     "name": "FonoClinic",
     "short_name": "FonoClinic",
-    "start_url": "index.html",
+    "description": "Aplicativo para gerenciamento de consultas da clínica FonoClinic.",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#007bff",
+    "theme_color": "#4285f4",
     "icons": [
         {
-            "src": "icon-192.png",
+            "src": "/images/icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon-512.png",
+            "src": "/images/icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
