--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,24 @@
 {
     "name": "FonoClinic",
     "short_name": "FonoClinic",
-    "description": "Aplicativo para gerenciamento de consultas da clínica FonoClinic.",
-    "start_url": "/index.html",
+    "start_url": "./index.html",
     "display": "standalone",
     "background_color": "#ffffff",
-    "theme_color": "#4285f4",
+    "theme_color": "#4285F4",
+    "description": "Gerenciamento de Consultas - FonoClinic",
     "icons": [
         {
-            "src": "/images/icon-192.png",
+            "src": "icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/images/icon-512.png",
+            "src": "icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
-    ]
+    ],
+    "orientation": "portrait-primary",
+    "scope": "./",
+    "lang": "pt-BR"
 }
