--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,16 @@
 {
-    "name": "FonoClinic",
-    "short_name": "FonoClinic",
-    "start_url": "index.html",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#4285F4",
-    "description": "Gerenciamento de Consultas - FonoClinic",
-    "icons": [
-        {
-            "src": "icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "FonoClinic",
+  "short_name": "FonoClinic",
+  "description": "Aplicativo para Gerenciamento de Consultas",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#4CAF50",
+  "icons": [
+    {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
 }
