--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,27 @@
 {
-  "name": "FonoClinic",
+  "name": "FonoClinic - Gerenciamento de Consultas",
   "short_name": "FonoClinic",
-  "description": "Aplicativo para Gerenciamento de Consultas",
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4CAF50",
+  "description": "Aplicativo para gerenciamento de consultas em clínicas.",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "images/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "images/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
-  ]
+  ],
+  "permissions": [
+    "storage"
+  ],
+  "version": "1.0",
+  "author": "Seu Nome",
+  "manifest_version": 2
 }
