--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-  "name": "FonoClinic - Gerenciamento de Consultas",
+  "name": "FonoClinic",
   "short_name": "FonoClinic",
+  "description": "Aplicativo Web para Gerenciamento de Consultas da FonoClinic",
   "start_url": "/index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4CAF50",
-  "description": "Aplicativo para gerenciamento de consultas em clínicas.",
   "icons": [
     {
       "src": "images/icon-192x192.png",
@@ -18,10 +18,8 @@
       "type": "image/png"
     }
   ],
-  "permissions": [
-    "storage"
-  ],
-  "version": "1.0",
-  "author": "Seu Nome",
-  "manifest_version": 2
+  "orientation": "portrait",
+  "scope": "/",
+  "related_applications": [],
+  "prefer_related_applications": false
 }
