--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,20 @@
 {
-  "name": "FonoClinic",
-  "short_name": "FonoClinic",
-  "description": "Aplicativo Web para Gerenciamento de Consultas da FonoClinic",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#4CAF50",
-  "icons": [
-    {
-      "src": "images/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "images/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "orientation": "portrait",
-  "scope": "/",
-  "related_applications": [],
-  "prefer_related_applications": false
+    "name": "FonoClinic",
+    "short_name": "FonoClinic",
+    "start_url": "index.html",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "description": "App para gerenciamento de consultas.",
+    "icons": [
+        {
+            "src": "icon-192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
