--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,20 @@
+
 {
-    "name": "FonoClinic",
-    "short_name": "FonoClinic",
-    "start_url": "index.html",
+    "name": "App de Gerenciamento de Consultas",
+    "short_name": "Consultas",
+    "start_url": "/index.html",
     "display": "standalone",
     "background_color": "#ffffff",
-    "description": "App para gerenciamento de consultas.",
+    "theme_color": "#4CAF50",
+    "description": "App para gerenciar consultas médicas com filtro de especialidade, data e horário.",
     "icons": [
         {
-            "src": "icon-192.png",
+            "src": "icon.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icon-512.png",
+            "src": "icon-large.png",
             "sizes": "512x512",
             "type": "image/png"
         }
