--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,26 @@
 {
-    "name": "FonoClinic",
-    "short_name": "FonoClinic",
-    "start_url": "index.html",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#4285f4",
-    "description": "Aplicativo para gerenciamento de consultas na FonoClinic.",
-    "icons": [
-        {
-            "src": "icon.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        }
-    ]
+  "name": "FonoClinic",
+  "short_name": "FonoClinic",
+  "description": "Aplicativo web para cadastro e gestão de consultas da clínica FonoClinic.",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#007bff",
+  "icons": [
+    {
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "scope": "/",
+  "orientation": "portrait-primary",
+  "lang": "pt-BR",
+  "dir": "ltr",
+  "display_override": ["window-controls-overlay", "minimal-ui"]
 }
