--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "name": "FonoClinic - Gestão de Consultas",
   "short_name": "FonoClinic",
-  "description": "Aplicativo web para cadastro e gestão de consultas da FonoClinic",
+  "description": "App web para cadastro e gestão de consultas da FonoClinic",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#f7f7f7",
   "theme_color": "#007bff",
   "icons": [
     {
