--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,21 @@
 {
-  "name": "FonoClinic - Gestão de Consultas",
-  "short_name": "FonoClinic",
-  "description": "App web para cadastro e gestão de consultas da FonoClinic",
+  "name": "Web App Consultas",
+  "short_name": "Consultas",
+  "description": "Aplicativo web para gestão de consultas",
   "start_url": "/index.html",
   "display": "standalone",
-  "background_color": "#f7f7f7",
-  "theme_color": "#007bff",
+  "background_color": "#ffffff",
+  "theme_color": "#2980b9",
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "/icons/icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
     },
     {
-      "src": "/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "/icons/icon-512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
-  ],
-  "orientation": "portrait",
-  "scope": "/"
+  ]
 }
